k3s/app-deployment.yaml
---
# Standalone Redis Pod
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels:
    app: redis
spec:
  containers:
    - name: redis
      image: redis:7.2-alpine
      ports:
        - containerPort: 6379
      volumeMounts:
        - name: redis-data
          mountPath: /data
  volumes:
    - name: redis-data
      emptyDir: {}
---
# App Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: video-app
  template:
    metadata:
      labels:
        app: video-app
    spec:
      containers:
      - name: app-container
        image: kuzurik797/videoapp-stripe:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        volumeMounts:
        - name: app-nfs-exports
          mountPath: /usr/src/app/assets
          subPath: assets
        - name: app-nfs-exports
          mountPath: /usr/src/app/public/admin
          subPath: public/admin
        - name: app-nfs-exports
          mountPath: /usr/src/app/public/site
          subPath: public/site

      volumes:
      - name: app-nfs-exports
        persistentVolumeClaim:
          claimName: nfs-pvc
